--- a/hello_world.yml
+++ b/hello_world.yml
@@ -1,6 +1,8 @@
 - name: Hello World Sample
   hosts: all
   gather_facts: true
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
   tasks:
     - name: Hello Message
       debug:
